<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddHackathon">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/dark"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <RelativeLayout
                    android:id="@+id/btnusernico"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="22dp"
                    android:background="@drawable/circle_background_user">

                    <TextView
                        android:id="@+id/lblname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="top"
                        android:text="@string/lblname"
                        android:textColor="#FFFFFF"
                        android:textSize="25sp"
                        android:textStyle="bold" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="30dp"
                    android:text="@string/add_hackathon"
                    android:textAppearance="@style/headings"
                    android:gravity="center_vertical"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/linedark" />

            <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="80dp">

                <!-- RecyclerView as the Background Content -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recvwaddhackathon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/recycleractiveevents_items"
                    android:scrollbars="vertical"
                    android:clipToPadding="false"
                    />

                <!-- Floating Button (Overlay) -->
                <Button
                    android:id="@+id/btncreateevent"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:text="Create an Event"
                    android:textAllCaps="false"
                    android:layout_gravity="center_horizontal|bottom"
                    android:background="@drawable/roundedfloatingactionbutton"
                    android:drawableLeft="@drawable/add1"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textColor="#FFFFFF"
                    />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="-80dp"
                android:orientation="horizontal"
                >

                <LinearLayout
                    android:id="@+id/btnhome"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/home"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textAppearance="@style/passive"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        />
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/btnactiveevents"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/active_events"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/active_events"
                        android:textAppearance="@style/passive"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnportfolio"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/portfolio"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/portfolio"
                        android:textAppearance="@style/passive"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/add_hackathon_active"
                        android:layout_marginTop="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/add_hackathon"
                        android:textAppearance="@style/active"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>